--- a/Learn Jax The Way That Makes Sense To Nobody Else.ipynb
+++ b/Learn Jax The Way That Makes Sense To Nobody Else.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7aa04f8",
+   "id": "b73203b3",
    "metadata": {},
    "source": [
     "You can apply grad as much as you want. JAX is different from other frameworks in that it optimizes higher derivatives really well."
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "4e67c3ea",
+   "id": "f4fc7527",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "6857160a",
+   "id": "1f5a3d5a",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af5550d",
+   "id": "385d552e",
    "metadata": {},
    "source": [
     "eventually we're left with a constant where the gradients is 0"
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b9ee74f",
+   "id": "23d3a762",
    "metadata": {},
    "source": [
     "Let's implement linear regression with all we know so far.\n",
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "b60e0b45",
+   "id": "101e7874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "26946150",
+   "id": "7db1fef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "6810a360",
+   "id": "e5e2ae03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "e68091e7",
+   "id": "8e62f6c8",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "43f2a6c5",
+   "id": "009b46de",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "cb4c2bf7",
+   "id": "0d89fe2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "bfdd912e",
+   "id": "29ed8658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "360e202b",
+   "id": "6cd2300c",
    "metadata": {},
    "source": [
     "ok let's update the weights now"
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "d5c9809d",
+   "id": "08cb8cee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "4f952c70",
+   "id": "f3096264",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa3601ff",
+   "id": "00966ea0",
    "metadata": {},
    "source": [
     "This might not actually work so let's but it in a single block so we can iterate quicker.\n",
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "1a83d384",
+   "id": "e501539b",
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c362611",
+   "id": "2a28e83e",
    "metadata": {},
    "source": [
     "what else should we cover for preliminary purposes? maybe pmap? That's a multi device thing so perhaps not yet.\n",
@@ -1845,7 +1845,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "78967edc",
+   "id": "900c5c86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,15 +1854,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3f959d2b",
+   "execution_count": 248,
+   "id": "9fbb0875",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "jax._src.api.ShapeDtypeStruct"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.ShapeDtypeStruct"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "8d5f4d48",
+   "id": "1355e990",
    "metadata": {},
    "source": [
     "## Pallas ?"
