--- a/Learn Jax The Way That Makes Sense To Nobody Else.ipynb
+++ b/Learn Jax The Way That Makes Sense To Nobody Else.ipynb
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799e7686",
+   "id": "6228db6c",
    "metadata": {},
    "source": [
     "The simplest attention kernel is softmax(Q*K^T / sqrt(d)) * V "
@@ -1936,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d4d38dd",
+   "id": "6ef44065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b25dce19",
+   "id": "00df8f9c",
    "metadata": {},
    "source": [
     "This is closer to an implementation of what you would actually find in the wild. What I really want you to pay attention to, pun intended, in the shape of q, k, and v.\n",
@@ -1989,7 +1989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad36fdd3",
+   "id": "36808438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74de7abe",
+   "id": "fb883699",
    "metadata": {},
    "source": [
     "Transformer models seem to be universally good base models. I believe this is because of two factors:\n",
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9bef68",
+   "id": "43db48ce",
    "metadata": {},
    "source": [
     "### Multi-Query Attention\n",
@@ -2094,22 +2094,35 @@
     "\n",
     "- b - batch size\n",
     "- s - sequence length\n",
-    "- e - embedding dimension\n",
+    "- d - embedding dimension\n",
     "- h - numbers of heads\n",
-    "- d - head dimension = e / h\n",
+    "- dh - head dimension = d / h\n",
     "\n",
     "If we have two matrices A (s * d), and B (d * s), then the work for matrix multiplication is $O(s^2*d)$\n",
     "\n",
-    "Arithmetic operators are $O(b * h * s^2 * d) = O(b * e * s^2)$ + $O(b * s * e^2)$. Depending on whether $e$ or $s$ is larger, one of these is the dominant factor.\n",
+    "Arithmetic operators are $O(b * h * s^2 * dh) = O(b * d * s^2)$ + $O(b * s * d^2)$. Depending on whether $d$ or $s$ is larger, one of these is the dominant factor.\n",
     "\n",
-    "For inference, e >= s, is likely.\n",
-    "\n"
+    "For inference, d >= s, is likely.\n",
+    "\n",
+    "The paper just threw $O(b * s * d^2)$ out there, and it confused me, because the limiting factor you hear about transformers is sequence length. It's the inference assumption we make, and quite frankly, perhaps at the time of this paper context length of 128k, 200k, or 1M wasn't thought of so much. Most of the tasks still dealt with classification or the like. In 2019 generative models weren't used in the way they are now. So if the inference sequence length is in the hundreds or even less, then it's safe to assume the math they use.\n",
+    "\n",
+    "Size of memory is $O(bsd + bhs^2 + d^2)$.\n",
+    "\n",
+    "$$\n",
+    "bsd / bsd^2 = 1 / d \\\\\n",
+    "bhs^2 / bsd^2 = s / d^2 = s / (dh*h)^2 \\\\\n",
+    "d^2 / bsd^2 = 1 / bs \\\\\n",
+    "$$\n",
+    "\n",
+    "We assume that d >= s and so $s / d^2 <= d / d^2 = 1 / d$ which leaves us with $O(1/d + 1/(b*s))$\n",
+    "\n",
+    "Essentially we're"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05e3570c",
+   "id": "09b1d1ce",
    "metadata": {},
    "outputs": [],
    "source": []
