--- a/Learn Jax The Way That Makes Sense To Nobody Else.ipynb
+++ b/Learn Jax The Way That Makes Sense To Nobody Else.ipynb
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6228db6c",
+   "id": "9f900210",
    "metadata": {},
    "source": [
     "The simplest attention kernel is softmax(Q*K^T / sqrt(d)) * V "
@@ -1936,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef44065",
+   "id": "28e132c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00df8f9c",
+   "id": "09a3b9f1",
    "metadata": {},
    "source": [
     "This is closer to an implementation of what you would actually find in the wild. What I really want you to pay attention to, pun intended, in the shape of q, k, and v.\n",
@@ -1989,7 +1989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36808438",
+   "id": "3acad5ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb883699",
+   "id": "418a35b1",
    "metadata": {},
    "source": [
     "Transformer models seem to be universally good base models. I believe this is because of two factors:\n",
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43db48ce",
+   "id": "b83bfec3",
    "metadata": {},
    "source": [
     "### Multi-Query Attention\n",
@@ -2116,13 +2116,51 @@
     "\n",
     "We assume that d >= s and so $s / d^2 <= d / d^2 = 1 / d$ which leaves us with $O(1/d + 1/(b*s))$\n",
     "\n",
-    "Essentially we're"
+    "So this means ratio of memory access to arithmetic operations is low, arithmetic operations > memory accesses. This is good, we want workloads where this is the case.\n",
+    "\n",
+    "I'll be honest. At first glance I don't see why this is important, since we need to access data in memory to do the computation. But I think this is important, particularly in the case of an accelerator because the size of the _fast_ memory is very small. From a CPU perspective we have, in order of speed from slowest to fastest: RAM, cache (L3, L2, L1), ALU registers. It's similar for GPUs/TPUs. So, I guess, the more we can keep the current workload in the fastest memory without swapping it the better.\n",
+    "\n",
+    "Anyway this ratio is the whole idea behind MQA. In the setting where we compute MHA one step at a time, i.e. inference.\n",
+    "\n",
+    "For memory access:\n",
+    "\n",
+    "$O(bsd + bhs^2 + d^2)$ done 1 up to s times  is $O(bs^2d + bhs^3 + sd^2)$ since (1 + 2 + 3 ... + s-1 + s) is $O(s^2)$.\n",
+    "\n",
+    "bhs^3 is derived from logits and weights, but now our input is no longer (b, s, d) but (b, d), since it's one step.\n",
+    "\n",
+    "the step to get logits is (Q * K^T), now (q * K^T). In the scenario with one head this is (1, d) x (d, s) = (1, s). Adding the batch and head dimensions it's now (b, h, s), where as before this would have been (b, h, s, s).\n",
+    "\n",
+    "And so this is not bhs^3 but the same as bhs^2.\n",
+    "\n",
+    "For arithmetic operations:\n",
+    "\n",
+    "$O(b * d * s^2) + O(b * s * d^2)$\n",
+    "\n",
+    "the first term is the attention part, the second term is matmuls for the projections.\n",
+    "\n",
+    "now since the input is one step the second term actually be $O(b*d^2)$, but it's done over s calls, so we're back to $O(b*s*d^2)$.\n",
+    "\n",
+    "Again, we remove a factor of s for the first term because the attention computation is (1, d) x (d, s) and not (s, d) x (d, s), over s calls that's back to $O(b * d * s^2)$. And we're left with the exact same result. If we weren't keeping track of the previous K, V computations then this would increase by a factor of $s$.\n",
+    "\n",
+    "Let's do the ratio again:\n",
+    "\n",
+    "$$\n",
+    "bs^2d / bsd^2 = s / d\n",
+    "bhs^2 / bsd^2 = s / d^2 \\\\\n",
+    "sd^2 / bsd^2 = 1 / b \\\\\n",
+    "$$\n",
+    "\n",
+    "$O(s/d + s/d^2 + 1/b)$\n",
+    "\n",
+    "Following the same logic as before we are left with $O(s/d + 1/b)$ which is the result of the paper.\n",
+    "\n",
+    "when b ~= 1 or s ~=d the ratio is close to 1, which is really, really bad. This means memory bandwidth is the limiting factor in the computation. b is limited only by memory capacity. Otherwise we want d > s. As the sequence length increase there's not much we can do. d is a constant, the dimension of a linear layer of the network. It is determined before we start training.."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09b1d1ce",
+   "id": "7d51df3c",
    "metadata": {},
    "outputs": [],
    "source": []
