--- a/Learn Jax The Way That Makes Sense To Nobody Else.ipynb
+++ b/Learn Jax The Way That Makes Sense To Nobody Else.ipynb
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f900210",
+   "id": "c9d92cde",
    "metadata": {},
    "source": [
     "The simplest attention kernel is softmax(Q*K^T / sqrt(d)) * V "
@@ -1936,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e132c8",
+   "id": "7930071a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a3b9f1",
+   "id": "d342b3f7",
    "metadata": {},
    "source": [
     "This is closer to an implementation of what you would actually find in the wild. What I really want you to pay attention to, pun intended, in the shape of q, k, and v.\n",
@@ -1989,7 +1989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acad5ed",
+   "id": "154c46f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418a35b1",
+   "id": "fa291444",
    "metadata": {},
    "source": [
     "Transformer models seem to be universally good base models. I believe this is because of two factors:\n",
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b83bfec3",
+   "id": "9001d948",
    "metadata": {},
    "source": [
     "### Multi-Query Attention\n",
@@ -2154,16 +2154,206 @@
     "\n",
     "Following the same logic as before we are left with $O(s/d + 1/b)$ which is the result of the paper.\n",
     "\n",
-    "when b ~= 1 or s ~=d the ratio is close to 1, which is really, really bad. This means memory bandwidth is the limiting factor in the computation. b is limited only by memory capacity. Otherwise we want d > s. As the sequence length increase there's not much we can do. d is a constant, the dimension of a linear layer of the network. It is determined before we start training.."
+    "when b ~= 1 or s ~=d the ratio is close to 1, which is really, really bad. This means memory bandwidth is the limiting factor in the computation. b is limited only by memory capacity. Otherwise we want d > s. As the sequence length increase there's not much we can do. d is a constant, the dimension of a linear layer of the network. It is determined before we start training. And so we're only left with manipulating $s$ somehow...\n",
+    "\n",
+    "We need to make $s/d$ something else. This term is derived K and V. We have to load (b, h, s, dh) elements into memory, when s ~= d, (b, s, s) elements. The only thing we can possibly reduce here is h. If h is 1 then this is (b, s, dh) elements. \n",
+    "\n",
+    "The original term is $bs^2d$ but if d ~= s then it's $bs^3$. Ok. Now we had it $bs^2*dh$ instead.\n",
+    "\n",
+    "$ (bs^2*dh) / bs^3 = dh / s $\n",
+    "\n",
+    "since $bsd^2 = bs^3$\n",
+    "\n",
+    "So now we have $ dh / s $ when s ~= d. Which reduces the cost by a factor h.\n",
+    "\n",
+    "The derivation in the paper is a bit different. I'm not sure exactly how they come up with it but the factor of h is consistent either way.\n",
+    "\n",
+    "Anyway the entire point of this is for the ratio of memory accesses vs. arithmetic operations to be low. During inference we can encounter situations where memory bandwidth becomes a limiting factor for throughput, so it should be minimized."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d51df3c",
+   "execution_count": 278,
+   "id": "3e004425",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mqa(x, Q, K, V, mask):\n",
+    "    \"\"\"\n",
+    "    x is the input tensor of shape (b, s, d)\n",
+    "    Q are the weight matrices of shape (d, d)\n",
+    "    K, V are the weight matrices of shape (d, k) where k = d // h\n",
+    "    mask is the mask tensor of shape (b, h, s, s)\n",
+    "    the output is of shape(b, s, d)\n",
+    "\n",
+    "    b is the batch size\n",
+    "    s is the sequence length\n",
+    "    d is the embedding dimension\n",
+    "    h is the number of heads\n",
+    "\n",
+    "    each head gets its own attention matrix.\n",
+    "    \"\"\"\n",
+    "    b,s,d = x.shape\n",
+    "    h = mask.shape[1]\n",
+    "    hd = d // h\n",
+    "    q = (x @ Q).reshape(b, h, s, hd)\n",
+    "    k = (x @ K).reshape(b, s, hd)\n",
+    "    v = (x @ V).reshape(b, s, hd)\n",
+    "    attn_m = jnp.einsum('bhqd, bkd -> bhqk', q, k) / jnp.sqrt(hd)\n",
+    "    logits = jax.nn.softmax(attn_m, where=mask, initial=0)\n",
+    "    o = jnp.einsum('bhqk, bvd -> bhqd', logits, v)\n",
+    "    ret =  jnp.einsum('bhqd->bqhd', o).reshape(b, s, d)\n",
+    "    return ret, logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "id": "32c31418",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4, 32)\n",
+      "(2, 8, 4, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "key = jax.random.PRNGKey(0)\n",
+    "b = 2\n",
+    "s = 4\n",
+    "d = 32\n",
+    "h = 8\n",
+    "x = jax.random.normal(key, (b, s, d))\n",
+    "\n",
+    "key1, key2, key3 = jax.random.split(key, num=3)\n",
+    "\n",
+    "Q = jax.random.normal(key1, (d, d))\n",
+    "K = jax.random.normal(key2, (d, d // h))\n",
+    "V = jax.random.normal(key3, (d, d // h))\n",
+    "mask = jnp.tril(jnp.ones((b, h, s, s)))\n",
+    "\n",
+    "output, attn = mqa(x, Q, K, V, mask)\n",
+    "print(output.shape)\n",
+    "print(attn.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "566a9a3a",
+   "metadata": {},
+   "source": [
+    "with an incremental cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "id": "474e7028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@jax.jit\n",
+    "def mqa_incremental_cache(x, Q, K, V, K_cache=None, V_cache=None):\n",
+    "    \"\"\"\n",
+    "    x is the input tensor of shape (b, d)\n",
+    "    Q are the weight matrices of shape (d, d)\n",
+    "    K, V are the weight matrices of shape (d, k) where k = d // h\n",
+    "    mask is the mask tensor of shape (b, h, s, s)\n",
+    "    K_cache, V_cache is of shape (b, s, k)\n",
+    "    \n",
+    "    the output is of shape(b, s, d)\n",
+    "\n",
+    "    b is the batch size\n",
+    "    s is the sequence length\n",
+    "    d is the embedding dimension\n",
+    "    h is the number of heads\n",
+    "\n",
+    "    each head gets its own attention matrix.\n",
+    "    \n",
+    "    Omitting the output matrix O just to simplify things.\n",
+    "    \"\"\"\n",
+    "    b,d = x.shape\n",
+    "    h = mask.shape[1]\n",
+    "    hd = d  // h\n",
+    "    q = (x @ Q).reshape(b, h, hd)\n",
+    "    k = (x @ K)\n",
+    "    v = (x @ V)\n",
+    "    \n",
+    "    if K_cache is not None:\n",
+    "        K_cache = jnp.concat((K_cache, jnp.expand_dims(k, axis=1)), axis=1)\n",
+    "    else:\n",
+    "        K_cache = jnp.expand_dims(k, axis=1)\n",
+    "        \n",
+    "    if V_cache is not None:\n",
+    "        V_cache = jnp.concat((V_cache, jnp.expand_dims(v, axis=1)), axis=1)\n",
+    "    else:\n",
+    "        V_cache = jnp.expand_dims(v, axis=1)\n",
+    "            \n",
+    "    attn_m = jnp.einsum('bhk,bsk->bhs', q, K_cache) / jnp.sqrt(hd)\n",
+    "    print(attn_m.shape, mask.shape)\n",
+    "    logits = jax.nn.softmax(attn_m)\n",
+    "    o = jnp.einsum('bhs,bsk->bhk', logits, V_cache).reshape(b, d)\n",
+    "    return o, K_cache, V_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "id": "0c52da68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "caches step 0: (4, 1, 16)\n",
+      "caches step 1: (4, 2, 16)\n",
+      "caches step 2: (4, 3, 16)\n",
+      "caches step 3: (4, 4, 16)\n",
+      "caches step 4: (4, 5, 16)\n",
+      "caches step 5: (4, 6, 16)\n",
+      "caches step 6: (4, 7, 16)\n",
+      "caches step 7: (4, 8, 16)\n",
+      "caches step 8: (4, 9, 16)\n",
+      "(4, 128)\n"
+     ]
+    }
+   ],
+   "source": [
+    "key = jax.random.PRNGKey(0)\n",
+    "b = 4\n",
+    "s = 9\n",
+    "d = 128\n",
+    "h = 8\n",
+    "x = jax.random.normal(key, (b, d))\n",
+    "\n",
+    "key1, key2, key3 = jax.random.split(key, num=3)\n",
+    "\n",
+    "Q = jax.random.normal(key1, (d, d))\n",
+    "K = jax.random.normal(key2, (d, d // h))\n",
+    "V = jax.random.normal(key3, (d, d // h))\n",
+    "\n",
+    "K_cache = None\n",
+    "V_cache = None\n",
+    "\n",
+    "for step in range(s):\n",
+    "    x, K_cache, V_cache = mqa_incremental_cache(x, Q, K, V, K_cache, V_cache)\n",
+    "    print(f'caches step {step}: {K_cache.shape}')\n",
+    "\n",
+    "print(x.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad31e1c",
+   "metadata": {},
+   "source": [
+    "This isn't jit friendly since K_cache and V_cache change shapes"
+   ]
   },
   {
    "cell_type": "markdown",
